<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swiperefresh">
    <!--android:background="?android:colorBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        tools:ignore="Overdraw">
    <android.support.v7.widget.CardView
        android:id="@+id/positionBasedCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <RelativeLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#00BCD4"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="358dp"
                android:layout_height="65dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#00000000"
                android:text="@string/button1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/positionBasedCard"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <RelativeLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#00BCD4"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="358dp"
                android:layout_height="65dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#00000000"
                android:text="@string/button2"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/pilani"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt2"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pilani_air_qualityTextView"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="1"
                android:text="@string/no_data"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/pilani_pm10"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/pilani_hum"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-1dp"
                android:layout_marginBottom="22dp"
                android:maxLines="1"
                android:text="@string/pilani_pm10" />

            <TextView
                android:id="@+id/pilani_pm25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/pilani_air_qualityTextView"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="126dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@+id/pilani_air_qualityTextView"
                android:maxLines="1"
                android:text="@string/pilani_pm25" />


            <TextView
                android:id="@+id/pilani_city_nameTextView"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/pilani_gpsTextView"
                android:layout_alignTop="@+id/pilani_air_qualityTextView"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-13dp"
                android:background="?android:selectableItemBackground"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/pilani_cell_city_name"
                android:textColor="#333"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/pilani_cell_city_name" />

            <TextView
                android:id="@+id/pilani_gpsTextView"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/pilani_city_nameTextView"
                android:layout_alignStart="@+id/pilani_pm25"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="23dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pilani_cell_city_location" />

            <TextView
                android:id="@+id/pilani_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/pilani_pm25"
                android:layout_alignStart="@id/pilani_pm25"
                android:layout_marginStart="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="15dp"
                android:text="@string/pilani_cell_city_maxTemp" />

            <TextView
                android:id="@+id/pilani_hum"

                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/pilani_pm25"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="14dp"
                android:layout_toRightOf="@id/pilani_temp"
                android:text="@string/pilani_cell_city_hum" />

            <ImageButton
                android:id="@+id/pilani_refreshButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:scaleType="fitCenter"
                android:src="@drawable/refresh" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="19dp"
                android:layout_toStartOf="@+id/pilani_city_nameTextView"
                android:text="AQI"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/delhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pilani"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="#00BCD4"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/delhi_air_qualityTextView"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="1"
                android:text="@string/no_data"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/delhi_pm10"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/delhi_hum"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginBottom="22dp"
                android:maxLines="1"
                android:text="@string/pilani_pm10" />

            <TextView
                android:id="@+id/delhi_pm25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/delhi_air_qualityTextView"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="126dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@+id/delhi_air_qualityTextView"
                android:maxLines="1"
                android:text="@string/delhi_pm25" />


            <TextView
                android:id="@+id/delhi_city_nameTextView"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/delhi_gpsTextView"
                android:layout_alignTop="@+id/delhi_air_qualityTextView"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-11dp"
                android:background="?android:selectableItemBackground"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/delhi_cell_city_name"
                android:textColor="#333"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/delhi_cell_city_name" />

            <TextView
                android:id="@+id/delhi_gpsTextView"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/delhi_city_nameTextView"
                android:layout_alignStart="@+id/delhi_pm25"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="23dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pilani_cell_city_location" />

            <TextView
                android:id="@+id/delhi_temp"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/delhi_pm25"
                android:layout_alignStart="@id/delhi_pm25"
                android:layout_marginStart="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:text="@string/delhi_cell_city_maxTemp" />

            <TextView
                android:id="@+id/delhi_hum"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/delhi_pm25"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/delhi_temp"
                android:text="@string/delhi_cell_city_hum" />

            <ImageButton
                android:id="@+id/delhi_refreshButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:scaleType="fitCenter"
                android:src="@drawable/refresh" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="19dp"
                android:layout_toStartOf="@+id/delhi_city_nameTextView"
                android:text="AQI"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


   <!-- <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="322dp"
        android:layout_height="389dp"
        android:layout_below="@+id/bt2"
        android:layout_marginTop="154dp">

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/emptyRecycler"
            android:layout_width="385dp"
            android:layout_height="556dp"
            android:layout_marginTop="73dp"
            android:gravity="center"
            android:text="emptyRecycler" />

    </android.support.v4.widget.SwipeRefreshLayout>-->

        </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>

